; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-arg.c_create_object_b_handler.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-arg.c_create_object_b_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@my_thing_b = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@thing_b_info = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32**** (i32****, i32****, i32*****, i32*****)* @create_object_b_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32**** @create_object_b_handler(i32**** %0, i32**** %1, i32***** %2, i32***** %3) #0 {
  %5 = alloca i32****, align 8
  %6 = alloca i32****, align 8
  %7 = alloca i32*****, align 8
  %8 = alloca i32*****, align 8
  store i32**** %0, i32***** %5, align 8
  store i32**** %1, i32***** %6, align 8
  store i32***** %2, i32****** %7, align 8
  store i32***** %3, i32****** %8, align 8
  %9 = load i32****, i32***** %5, align 8
  %10 = bitcast i32**** %9 to i32*****
  %11 = call i32 @JERRY_UNUSED(i32***** %10)
  %12 = load i32*****, i32****** %7, align 8
  %13 = call i32 @JERRY_UNUSED(i32***** %12)
  %14 = load i32*****, i32****** %8, align 8
  %15 = call i32 @JERRY_UNUSED(i32***** %14)
  %16 = load i32****, i32***** %6, align 8
  %17 = call i32 @jerry_value_is_object(i32**** %16)
  %18 = call i32 @TEST_ASSERT(i32 %17)
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @my_thing_b, i32 0, i32 0), align 4
  %19 = load i32****, i32***** %6, align 8
  %20 = call i32 @jerry_set_object_native_pointer(i32**** %19, %struct.TYPE_3__* @my_thing_b, i32* @thing_b_info)
  %21 = call i32**** @jerry_create_boolean(i32 1)
  ret i32**** %21
}

declare dso_local i32 @JERRY_UNUSED(i32*****) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @jerry_value_is_object(i32****) #1

declare dso_local i32 @jerry_set_object_native_pointer(i32****, %struct.TYPE_3__*, i32*) #1

declare dso_local i32**** @jerry_create_boolean(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
